modify for humbinal

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,7 +25,7 @@
       {{ .TableOfContents }}
     </div>
     {{ end }}
-    <div class="ui segment actions">
+    <!-- <div class="ui segment actions">
       <button
         class="ui circular icon button save-as-image"
         title="{{ i18n "saveAsImage" }}"
@@ -34,7 +34,7 @@
       </button>
 
       {{ partial "share.html" . }}
-    </div>
+    </div> -->
   </aside>
   <div class="sixteen wide mobile sixteen wide tablet twelve wide computer column markdown-body dream-single" id="dream-save-post-as-img">
     {{ if and .Params.Cover .Site.Params.showSummaryCoverInPost }}
