--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,9 +1,9 @@
 <article class="ui attached segment card dream-card">
   <a class="image" href="{{ .Permalink }}">
     {{ if isset .Params "cover" }}
-    <img src="{{ .Params.cover }}" alt="{{ .Title }}" />
+    <img src="{{ .Permalink }}/{{ .Params.cover }}" alt="{{ .Title }}" />
     {{ else }}
-    <img src="/img/default{{ index (shuffle (seq 1 4)) 0 }}.jpg" alt="{{ .Title }}" />
+    <img src="https://source.unsplash.com/600x400/?nature,water" alt="{{ .Title }}" />
     {{ end }}
   </a>
 
